# sai2-primitives-perso

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SAI2-PRIMITIVESConfig.cmake.in
.github/: CODEOWNERS
.github/actions/build-repo/: action.yml
.github/workflows/: upload_artifact.yml
examples/: CMakeLists.txt
examples/00-partial_joint_control/: 00-partial_joint_control.cpp  CMakeLists.txt  world.urdf
examples/01-joint_control/: 01-joint_control.cpp  CMakeLists.txt
examples/01-puma_control_pos_and_ori_tasks/: 01-puma_control_pos_and_ori_tasks.cpp  CMakeLists.txt  puma.urdf  world.urdf
examples/02-joint_control_internal_otg/: 02-joint_control_internal_otg.cpp  CMakeLists.txt  puma.urdf  world.urdf
examples/02-puma_control_posori_tasks/: 02-puma_control_posori_tasks.cpp  CMakeLists.txt
examples/02-task_space_control/: 02-task_space_control.cpp  02-task_space_control_prev.cpp  CMakeLists.txt  puma.urdf
examples/03-cartesian_motion_control/: 03-cartesian_motion_control.cpp  CMakeLists.txt  puma.urdf
examples/03-kuka_arm_motion_primitive/: 03-kuka_arm_motion_primitive.cpp  CMakeLists.txt  kuka_iiwa.urdf  world.urdf
examples/03-task_and_redundancy/: 03-task_and_redundancy.cpp  CMakeLists.txt
examples/04-kuka_surface_surface_alignment/: 04-kuka_surface_surface_alignment.cpp  CMakeLists.txt  kuka_iiwa.urdf  world.urdf
examples/04-surface_surface_contact/: 04-surface_surface_contact.cpp  CMakeLists.txt  world.urdf
examples/04-task_and_redundancy/: 04-task_and_redundancy.cpp  CMakeLists.txt  world.urdf
examples/05-task_and_redundancy/: 05-task_and_redundancy.cpp  CMakeLists.txt  panda_arm.urdf
examples/05-two_hand_two_robots_manipulation/: 05-two_hand_two_robots_manipulation.cpp  CMakeLists.txt
examples/05-two_hand_two_robots_object_movement/: 05-two_hand_two_robots_object_movement.cpp  CMakeLists.txt  panda_arm.urdf  panda_arm_hand.urdf  world.urdf
examples/05-using_robot_controller/: 05-using_robot_controller.cpp  CMakeLists.txt  world.urdf
examples/06-kuka_bottle_cap/: 06-kuka_bottle_cap.cpp  Bottle_NoThreads.mtl  CMakeLists.txt  Cap_NoThreads.mtl  bottle.urdf  kuka_iiwa.urdf  world.urdf
examples/06-partial_joint_task/: 06-partial_joint_task.cpp  CMakeLists.txt  panda_arm_sliding_base.urdf  world.urdf
examples/06-task_and_redundancy/: 06-task_and_redundancy.cpp  CMakeLists.txt  world.urdf
examples/07-surface_surface_contact/: 07-surface_surface_contact.cpp  CMakeLists.txt  panda_arm.urdf  world.urdf
examples/08-partial_cartesian_motion_control/: 08-partial_cartesian_motion_control.cpp  CMakeLists.txt
examples/08-partial_motion_force_task/: 08-partial_motion_force_task.cpp  CMakeLists.txt  world.urdf
examples/09-3d_position_force_controller/: 09-3d_position_force_controller.cpp  CMakeLists.txt  panda_arm.urdf  world.urdf
examples/10-3d_orientation_controller/: 10-3d_orientation_controller.cpp  CMakeLists.txt  panda_arm.urdf  world.urdf
examples/10-haptic_impedance_control/: 10-haptic_impedance_control.cpp  CMakeLists.txt
examples/10-task_and_redundancy_using_controller/: 10-task_and_redundancy_using_controller.cpp  CMakeLists.txt
examples/11-planar_robot_controller/: 11-planar_robot_controller.cpp  CMakeLists.txt  rrrrbot.urdf  world.urdf
examples/11-surface_surface_contact_using_controller/: 11-surface_surface_contact_using_controller.cpp  CMakeLists.txt
examples/13-two_hand_two_robots_manipulation/: 13-two_hand_two_robots_manipulation.cpp  CMakeLists.txt  panda_arm_hand.urdf
examples/15-haptic_control_impedance_type/: 15-haptic_control_impedance_type.cpp  CMakeLists.txt  panda_arm.urdf  world.urdf
examples/16-haptic_control_admittance_type/: 16-haptic_control_admittance_type.cpp  CMakeLists.txt  panda_arm.urdf  world.urdf
examples/17-bilateral_teleop_with_POPC/: 17-bilateral_teleop_with_POPC.cpp  CMakeLists.txt  panda_arm.urdf
examples/18-panda_singularity/: 18-panda_singularity.cpp  CMakeLists.txt  world.urdf
examples/19-puma_singularity/: 19-puma_singularity.cpp  CMakeLists.txt  world.urdf
examples/20-haptic_impedance_control/: 20-haptic_impedance_control.cpp  CMakeLists.txt  panda_arm_sim.urdf  world.urdf
examples/24-singularity_control/: 24-singularity_control.cpp  CMakeLists.txt
examples/demo_CS223A_kuka/: CMakeLists.txt  demo_CS223A_kuka.cpp  world.urdf
examples/models/puma560/: puma.urdf
src/: HapticDeviceController.cpp  HapticDeviceController.h  POPCBilateralTeleoperation.cpp  POPCBilateralTeleoperation.h  RobotController.cpp  RobotController.h  Sai2Primitives.h
src/haptic_tasks/: BilateralPassivityController.cpp  BilateralPassivityController.h  HapticController.cpp  HapticController.h  ImpedanceControl.cpp  ImpedanceControl.h  OpenLoopTeleop.cpp  OpenLoopTeleop.h  PositionControl.cpp  PositionControl.h
src/helper_modules/: OTG_6dof_cartesian.cpp  OTG_6dof_cartesian.h  OTG_joints.cpp  OTG_joints.h  POPCExplicitForceControl.cpp  POPCExplicitForceControl.h  Sai2PrimitivesCommonDefinitions.cpp  Sai2PrimitivesCommonDefinitions.h
src/humanoid/: FloatingBaseContactModel.cpp  FloatingBaseContactModel.h  InternalForceSelectionBarrierMethod.cpp  InternalForceSelectionBarrierMethod.h
src/perception/: ForceSpaceParticleFilter.cpp  ForceSpaceParticleFilter.h  MomentumObserver.cpp  MomentumObserver.h
src/primitives/: DualArmObjectMotion.cpp  DualArmObjectMotion.h  RedundantArmMotion.cpp  RedundantArmMotion.h  SurfaceSurfaceAlignment.cpp  SurfaceSurfaceAlignment.h  TemplatePrimitive.h
src/tasks/: JointTask.cpp  JointTask.h  MotionForceTask.cpp  MotionForceTask.h  OrientationTask.cpp  OrientationTask.h  PartialJointTask.cpp  PartialJointTask.h  PosOriTask.cpp  PosOriTask.h  PositionTask.cpp  PositionTask.h  SingularityHandler.cpp  SingularityHandler.h  SupportAndConstraintsTask.cpp  SupportAndConstraintsTask.h  TemplateTask.h  TwoHandTwoRobotsTask.cpp  TwoHandTwoRobotsTask.h  TwoHandTwoRobotsTaskNonRigid.cpp  TwoHandTwoRobotsTaskNonRigid.h  TwoHandTwoRobotsTask_bis.cpp  TwoHandTwoRobotsTask_bis.h
src/trajectory_generation/: OTG.cpp  OTG.h  OTG_ori.cpp  OTG_ori.h  OTG_posori.cpp  OTG_posori.h
